change projections to dto and others changes